# SLR_Parser

./: CMakeLists.txt  README.md
source/: main.cpp
source/args/: CMakeLists.txt
source/args/include/args/: Args.hpp  IOManager.hpp
source/args/src/: Args.cpp  IOManager.cpp
source/lexer/: CMakeLists.txt
source/lexer/include/lexer/: Lexer.hpp  tokens.hpp
source/lexer/src/: Lexer.cpp  lexer.l
source/parser/: CMakeLists.txt
source/parser/include/parser/: Lexer.hpp  tokens.hpp
source/parser/src/: lexer.l
source/syntaxer/: CMakeLists.txt
source/syntaxer/include/syntaxer/: Grammar.hpp  ParsingTable.hpp  Syntaxer.hpp
source/syntaxer/src/: Grammar.cpp  ParsingTable.cpp  Syntaxer.cpp
source/utils/: CMakeLists.txt
source/utils/include/utils/: common.hpp  concole.hpp
source/utils/src/: common.cpp
tests/: run_tests.py  simple1.popa
tests/invalid/: error2.popin  error4.popin
tests/reports/invalid/: error1.popout  error2.popout  error3.popout  error4.popout  error5.popout
tests/reports/valid/: assoc1.popout  assoc2.popout  assoc3.popout  brakets1.popout  brakets2.popout  brakets3.popout  hard1.popout  hard2.popout  hard3.popout  hard4.popout  prio1.popout  prio2.popout  simple1.popout  simple2.popout  simple3.popout
tests/valid/: hard1.popin  hard2.popin  hard3.popin  hard4.popin  prio2.popin  simple3.popin
